plugins/xpath/xpath-lang/testData/xpath2/parsing/invalidWildcard.xpath2
*:<error descr="NCName expected">*</error>